# cti-blueprints

./: .coveragerc  .dockerignore  .gitignore  .hadolint.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SETUP_NEW_REPO.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  linter.yml  test.yml
requirements/: dev.in  dev.txt  requirements.in
src/: conftest.py
src/cti_authoring_tool/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  vue.config.js
src/cti_authoring_tool/public/: index.html  settings.json
src/cti_authoring_tool/src/: App.vue  main.ts
src/cti_publishing_tool/: .gitignore  README.md  cti_publishing_tool.py  requirements.txt
src/cti_publishing_tool/data/: An Example Campaign Report.json  An Example Executive Report.json  An Example Intrusion Analysis Report.json  An Example Threat Actor Report.json  test.json
src/cti_publishing_tool/templates/: CTID-CampaignReportTemplate.html  CTID-ExecutiveReportTemplate.html  CTID-IAReportTemplate.html  CTID-TAReportTemplate.html  example_template.html
src/liquid/: liquid_playground.py
src/liquid/data/: An Intrusion Analysis Report.json
src/liquid/output/: example_rendered.docx  example_rendered.html
src/liquid/templates/: CTID-CampaignReportTemplate.html  CTID-IAReportTemplate.html  CTID-TAReportTemplate.html
src/project_name/: check_palindrome.py
templates/: CTID-CampaignReportTemplate.docx  CTID-ExecutiveReportTemplate.docx  CTID-IAReportTemplate.docx  CTID-TAReportTemplate.docx
tests/: test_check_palindrome.py
(+399 files in other folders)
