[metadata]
name = project_name
version = 0.1
description =  Short description of project_name
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/center-for-threat-informed-defense/project_name

[flake8]
max-line-length = 110
max-complexity = 20
extend-ignore = E203
exclude =
    # No need to traverse our git directory
    .git,
    # No value in checking cache directories
    __pycache__,
    # No need to check virtualenv
    .venv,
    # No need to check tox dir
    .tox

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

# [options.entry_points]
# console_scripts =
# for example, rather than having to create a manage.py file,
# use the following entry point. Once the package is installed,
# the command will be available as `manage.py`
#    manage.py = project_name.config:config.django_manage

[bdist_wheel]
universal = 1
